# otus-cpp-2023-06-pw

./: CMakeLists.txt  main.cpp
configs/: node_config.json  node_config2.json  node_config22.json  node_config3.json
libs/: CMakeLists.txt
libs/netlib/: CMakeLists.txt
libs/netlib/include/: abstractconnectionsession.hpp  abstractnodeconnection.hpp  clientconnectionsession.hpp  connectionsession.hpp  jsonconfigreader.hpp  linksettings.hpp  networknode.hpp  route.hpp  routetable.hpp  socketconnectionsession.hpp
libs/netlib/src/: abstractnodeconnection.cpp  clientconnectionsession.cpp  connectionsession.cpp  jsonconfigreader.cpp  networknode.cpp  route.cpp  socketconnectionsession.cpp
libs/netlib/tests/: CMakeLists.txt  main.cpp
libs/proto/: CMakeLists.txt
libs/proto/netlibprotobuf/: CMakeLists.txt
libs/proto/netlibprotobuf/proto/: Connection.proto  connection.proto  information_packet.proto
libs/proto/netlibprotocol/: CMakeLists.txt
libs/proto/netlibprotocol/include/: crc.hpp  custompacket.hpp  netlibheader.hpp  netlibprotocol.hpp  registrationrequest.hpp  registrationresponse.hpp  tunneldata.hpp
libs/proto/netlibprotocol/src/: netlibprotocol.cpp
slides/: 16_9_slide.pptx
